=== HEAD

* Fix join_table when doing the first join for a dataset where the first source is a dataset when using unqualified columns (jeremyevans)

* Fix a few corner cases in eager_graph (jeremyevans)

* Support transactions on MSSQL (jeremyevans)

* Use string literals in AS clauses on SQLite (jeremyevans) (#241)

* AlterTableGenerator#set_column_allow_null was added to SET/DROP NOT NULL for columns (divoxx)

* Database#tables now works for MySQL databases using the JDBC adapter (jeremyevans)

* Database#drop_view can now take multiple arguments to drop multiple views at once (jeremyevans)

* Schema modification methods (e.g. drop_table, create_table!) now remove the cached schema entry (jeremyevans)

* Models can now determine their primary keys by looking at the schema (jeremyevans)

* No longer include :numeric_precision and :max_chars entries in the schema column hashes, use the :db_type entry instead (jeremyevans)

* Make schema parsing on PostgreSQL handle implicit schemas (e.g. schema(:schema__table)), so it works with models for tables outside the public schema (jeremyevans)

* Significantly speed up schema parsing on MySQL (jeremyevans)

* Include primary key information when parsing the schema (jeremyevans)

* Fix schema generation of composite foreign keys on MySQL (clivecrous, jeremyevans)

=== 2.5.0 (2008-09-03)

* Add Dataset #set_defaults and #set_overrides, used for scoping the values used in insert/update statements (jeremyevans)

* Allow Models to use the RETURNING clause when inserting records on PostgreSQL (jeremyevans)

* Raise Sequel::DatabaseError instead of generic Sequel::Error for database errors, don't swallow tracebacks (jeremyevans)

* Use INSERT ... RETURNING ... with PostgreSQL 8.2 and higher (jeremyevans)

* Make insert_sql, delete_sql, and update_sql respect the :sql option (jeremyevans)

* Default to converting 2 digit years, use Sequel.convert_two_digit_years = false to get back the old behavior (jeremyevans)
