@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow string keys to be used when using Dataset#multi_insert (jeremyevans)
+
 * Fix join_table when doing the first join for a dataset where the first source is a dataset when using unqualified columns (jeremyevans)
 
 * Fix a few corner cases in eager_graph (jeremyevans)
